--- a/public/Client_Assests/css/main.css
+++ b/public/Client_Assests/css/main.css
@@ -93,3 +93,88 @@
   }
 
   /*media quries*/
+
+/*loader*/
+
+.loader {
+    position:fixed;
+  z-index:100;
+  color:#fff;
+  top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.loader img{
+  -webkit-animation:k3d 3.5s infinite linear;
+  -moz-animation:k3d 3.5s infinite linear;
+  -o-animation:k3d 3.5s infinite linear;
+  animation:k3d 3.5s infinite linear
+}
+@-webkit-keyframes k3d {
+  0% {
+    -webkit-transform: rotateY(0deg);
+  }
+  50% {
+    -webkit-transform: rotateY(360deg);
+  opacity:0.3;
+  }
+  100%{
+    -webkit-transform: rotateY(0deg);
+  }
+}
+@-moz-keyframes k3d {
+
+  0% {
+   -moz-transform: rotateY(0deg);
+  }
+  50% {
+    -moz-transform: rotateY(360deg);
+  
+  }
+  100%{
+    -moz-transform: rotateY(0deg);
+  }
+
+}
+@-ms-keyframes k3d {
+
+
+  0% {
+    -ms-transform: rotateY(0deg);
+  }
+  50% {
+     -ms-transform: rotateY(360deg);
+   opacity:0.3;
+  }
+  100%{
+     -ms-transform: rotateY(0deg);
+  }
+
+}
+@-o-keyframes k3d {
+
+  0% {
+   -o-transform: rotateY(0deg);
+  }
+  50% {
+    -o-transform: rotateY(360deg);
+  opacity:0.3;
+  }
+  100%{
+     -o-transform: rotateY(0deg);
+  }
+
+}
+@keyframes k3d {
+0% {
+  transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(360deg);
+  opacity:0.3;
+  }
+  100%{
+     transform: rotateY(0deg);
+  }
+
+}
