--- a/public/Client_Assests/css/style.css
+++ b/public/Client_Assests/css/style.css
@@ -100,16 +100,12 @@ blockquote p {
 }
 /* ---------Page preload--------------------------------------*/
 .loader {
-	position:fixed;
-	top:50% !important;
-	left:50%;
-	width:50px;
-	height:50px;
-	margin-left:-25px;
-	z-index:100;
-	font-size:12px;
-	line-height:50px;
-	color:#fff;
+	  position:fixed;
+  z-index:100;
+  color:#fff;
+  top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .loader img{
 	-webkit-animation:k3d 3.5s infinite linear;
@@ -136,7 +132,7 @@ blockquote p {
   }
   50% {
     -moz-transform: rotateY(360deg);
-	opacity:0.3;
+	
   }
   100%{
     -moz-transform: rotateY(0deg);
