--- a/public/Client_Assests/css/main.css
+++ b/public/Client_Assests/css/main.css
@@ -7,6 +7,11 @@
  		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
  	}*/
+  .footer-contacts li:nth-child(2){
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
+  }
+ 
  	header nav a, header .subnav a, header .nav-social li a, header .subnav a{
  		 background: linear-gradient(30deg,#b6712b 0%,#F2EA91 20%,#b6712b 100%);
  		-webkit-background-clip: text;
@@ -177,4 +182,12 @@
      transform: rotateY(0deg);
   }
 
+}
+
+
+@media (max-width: 767.98px) {
+.footer-contacts li:before {
+ height: 0px !important;
+ width: 0px !important;
+}
 }
