--- a/public/Client_Assests/css/main.css
+++ b/public/Client_Assests/css/main.css
@@ -37,6 +37,11 @@
  		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
  	}
+  .to-top-holder p{
+    background: linear-gradient(30deg,#b6712b 0%,#F2EA91 50%,#b6712b 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
  	.header-inner:before {
  		background:#191919 !important; 
  		color: #C59D5F !important;
@@ -197,6 +202,22 @@
 
 }
 
+.hero-content:before,.hero-content:after,.hero-link,.hero-line {
+  background: linear-gradient(30deg,#b6712b 0%,#F2EA91 20%,#b6712b 100%) !important;
+  /*background:black;*/
+  /*background: linear-gradient(30deg, #2e1a0c 0%, #b6712b 40%,#F2EA91 60%, #492d12 100%);*/
+  /*background: linear-gradient(30deg, #2e1a0c 0%, #b6712b 50%, #492d12 100%);*/
+}
+.hero-link a:before {
+ background: linear-gradient(30deg,#b6712b 0%,#F2EA91 20%,#b6712b 100%) !important;
+/*background:#191919;*/
+}
+.custom-scroll-link i {
+  color: black;
+}
+.logo-vis{
+    /*width: 120% !important;*/
+    }
 
 @media (max-width: 767.98px) {
 .footer-contacts li:before {
