--- a/public/Client_Assests/css/main.css
+++ b/public/Client_Assests/css/main.css
@@ -203,10 +203,10 @@
 }
 
 .hero-content:before,.hero-content:after,.hero-link,.hero-line {
-  background: linear-gradient(30deg,#b6712b 0%,#F2EA91 20%,#b6712b 100%) !important;
+/*  background: linear-gradient(30deg,#b6712b 0%,#F2EA91 20%,#b6712b 100%) !important;*/
   /*background:black;*/
-  /*background: linear-gradient(30deg, #2e1a0c 0%, #b6712b 40%,#F2EA91 60%, #492d12 100%);*/
-  /*background: linear-gradient(30deg, #2e1a0c 0%, #b6712b 50%, #492d12 100%);*/
+/*  background: linear-gradient(30deg, #2e1a0c 0%, #b6712b 40%,#F2EA91 60%, #492d12 100%);*/
+  background: linear-gradient(30deg, #2e1a0c 0%, #b6712b 50%, #492d12 100%);
 }
 .hero-link a:before {
  background: linear-gradient(30deg,#b6712b 0%,#F2EA91 20%,#b6712b 100%) !important;
