--- a/public/Client_Assests/css/main.css
+++ b/public/Client_Assests/css/main.css
@@ -201,19 +201,28 @@
   }
 
 }
+/*menu items */
+ .menu-item-details a, .menu-item-details,.menu-item p{
+   background: linear-gradient(30deg,#b6712b 0%,#F2EA91 50%,#b6712b 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+}
+.menu-item-dot {
+    border-bottom: 1px dotted #F2EA91;
+}
+.menu-sec {
+  background: black;
+}
+.triangle-decor {
+  display: none;
+}
 
 .hero-content:before,.hero-content:after,.hero-link,.hero-line {
 /*  background: linear-gradient(30deg,#b6712b 0%,#F2EA91 20%,#b6712b 100%) !important;*/
   /*background:black;*/
 /*  background: linear-gradient(30deg, #2e1a0c 0%, #b6712b 40%,#F2EA91 60%, #492d12 100%);*/
-  background: linear-gradient(30deg, #2e1a0c 0%, #b6712b 50%, #492d12 100%);
-}
-.hero-link a:before {
- background: linear-gradient(30deg,#b6712b 0%,#F2EA91 20%,#b6712b 100%) !important;
-/*background:#191919;*/
-}
-.custom-scroll-link i {
-  color: black;
+  /*background: linear-gradient(30deg, #2e1a0c 0%, #b6712b 50%, #492d12 100%);*/
 }
 .logo-vis{
     /*width: 120% !important;*/
@@ -225,3 +234,6 @@
  width: 0px !important;
 }
 }
+
+
+/*AIzaSyCl7yb5tfckCeROvXkiQOOpR0bv9M_scdQ*/
