--- a/public/Client_Assests/css/main.css
+++ b/public/Client_Assests/css/main.css
@@ -214,13 +214,13 @@
 .hot-desc{
    background: linear-gradient(30deg,#F2EA91 0%,#b6712b  50%,#F2EA91 100%);
 }
-#menu-sec {
+#menu-sec,.about-sec{
   background: #191919;
 }
 .triangle-decor {
   display: none;
 }
-.menu-item-price,.contact-details,.contact-details ul li a{
+.menu-item-price,.contact-details,.contact-details ul li a,.about-sec p ,.about-sec h4,.chefname,.chefinfo,.testimonials-holder p,.section-title{
    background: linear-gradient(30deg,#b6712b 0%,#F2EA91 50%,#b6712b 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
