--- a/public/Client_Assests/css/main.css
+++ b/public/Client_Assests/css/main.css
@@ -248,11 +248,11 @@ nav{
   font-size: 18px !important;
   margin-top: 15px;
 }
-.hero-content:before,.hero-content:after,.hero-link,.hero-line {
-/*  background: linear-gradient(30deg,#b6712b 0%,#F2EA91 20%,#b6712b 100%) !important;*/
-  /*background:black;*/
-/*  background: linear-gradient(30deg, #2e1a0c 0%, #b6712b 40%,#F2EA91 60%, #492d12 100%);*/
-  /*background: linear-gradient(30deg, #2e1a0c 0%, #b6712b 50%, #492d12 100%);*/
+.comming-soon-menu{
+ background-image:url('../images/about_us.jpg');
+}
+.menu-comming-soon-text{
+  font-size: 80px
 }
 .logo-vis,.logo-notvis{
     width: 125% !important;
